--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Released   : 20131006
 	<div id="header" class="container">
 		<div id="logo">
 			<span class="icon icon-fire"></span>
-			<h1><a href="#">Fervency</a></h1>
+			<h1><img src="/images/logo1.png" alt="T&R Custom Dealer Services"></img></h1>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span> </div>
 		<div id="menu">
 			<ul>
