--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Released   : 20131006
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><img src="/images/logo1.png" alt="T&R Custom Dealer Services"></img></h1>
+			<h1><img src="images/logo2.png" alt="T&R Custom Dealer Services"></img></h1>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
