--- a/index.html
+++ b/index.html
@@ -43,88 +43,58 @@ Released   : 20131006
 <div id="wrapper3">
 	<div id="portfolio" class="container">
 		<div class="title">
-			<h2>Design Portfolio</h2>
-			<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
+			<h2>Placeholder</h2>
+			<span class="byline">Placeholder</span> </div>
 		<div class="column1">
 			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full" /></a>
-				<h3>Vestibulum venenatis</h3>
-				<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-				<a href="#" class="button button-small">Etiam posuere</a> </div>
+				<h3>Placeholder</h3>
+				<p>Placeholder</p>
+				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 		<div class="column2">
 			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full" /></a>
-				<h3>Praesent scelerisque</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-				<a href="#" class="button button-small">Etiam posuere</a> </div>
+				<h3>Placeholder</h3>
+				<p>Placeholder</p>
+				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 		<div class="column3">
 			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full" /></a>
-				<h3>Donec dictum metus</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-				<a href="#" class="button button-small">Etiam posuere</a> </div>
+				<h3>Placeholder</h3>
+				<p>Placeholder</p>
+				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 		<div class="column4">
 			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
-				<h3>Mauris vulputate dolor</h3>
-				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-				<a href="#" class="button button-small">Etiam posuere</a> </div>
+				<h3>Placeholder</h3>
+				<p>Placeholder</p>
+				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 	</div>
 </div>
 <div id="wrapper1">
 	<div id="welcome" class="container">
 		<div class="title">
-			<h2>Welcome to our website</h2>
-			<span class="byline">Mauris vulputate dolor sit amet nibh</span> </div>
+			<h2>Placeholder</h2>
+			<span class="byline">Placeholder</span> </div>
 		<div class="content">
-			<p>This is <strong>Fervency</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-			<a href="#" class="button">Etiam posuere</a> </div>
+			<p>T&R Custom Dealer Services, LLC </p>
+			<a href="#" class="button">Placeholder</a> </div>
 	</div>
-</div><div id="wrapper2">
-	<div id="newsletter" class="container">
-		<div class="title">
-			<h2>Newsletter Signup</h2>
-			<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
-		<div class="content">
-			<form method="post" action="#">
-				<div class="row half">
-					<div class="6u">
-						<input type="text" class="text" name="name" placeholder="Name" />
-					</div>
-					<div class="6u">
-						<input type="text" class="text" name="email" placeholder="Email" />
-					</div>
-				</div>
-				<div class="row half">
-					<div class="12u">
-						<textarea name="message" placeholder="Message"></textarea>
-					</div>
-				</div>
-				<div class="row">
-					<div class="12u"> <a href="#" class="button submit">Send Message</a> </div>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
 <div id="wrapper4">
 	<div id="footer" class="container">
 		<div>
 			<header class="title">
 				<h2>Get in touch</h2>
-				<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </header>
+				<span class="byline">Placeholder</span> </header>
 			<ul class="contact">
 				<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
 				<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-				<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-				<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-				<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
 			</ul>
 		</div>
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>&copy; T&R CUSTOM DEALER SERVICES, LLC. All rights reserved.</p>
 </div>
 </body>
 </html>
