--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ Released   : 20131006
 <div id="wrapper3">
 	<div id="portfolio" class="container">
 		<div class="title">
-			<h2>Placeholder</h2>
-			<span class="byline">Placeholder</span> </div>
+			<h2>Work in Progress</h2>
+			<span class="byline">None of the buttons will work, only index page is setup. Working on the other pages so that everything is fully functional, hope you like it Dad.</span> </div>
 		<div class="column1">
 			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full" /></a>
 				<h3>Placeholder</h3>
