--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Released   : 20131006
 	<div id="portfolio" class="container">
 		<div class="title">
 			<h2>Work in Progress</h2>
-			<span class="byline">None of the buttons will work, only index page is setup. Working on the other pages so that everything is fully functional, hope you like it Dad.</span> </div>
+			<span class="byline">Hope you like it so far, Dad.</span> </div>
 		<div class="column1">
 			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full" /></a>
 				<h3>Placeholder</h3>
