--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Released   : 20131006
 <title></title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
