--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@ Released   : 20131006
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    @-webkit-viewport { width: device-width; }
-    @-moz-viewport { width: device-width; }
-    @-ms-viewport { width: device-width; }
-    @-o-viewport { width: device-width; }
-    @viewport { width: device-width; }
-</style>
-<script>
-    // Important for windows phone 8
-    if (navigator.userAgent.match(/IEMobile\/10\.0/))
-    {
-        var msViewportStyle = document.createElement("style");
-        msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
-        document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
-    }
-</script>
+<meta name="viewport" content="width=device-width, initial-scale="0.4">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
 <meta name="keywords" content="" />
