--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ Released   : 20131006
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale="0.4">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>T&R Custom Dealer Services, LLC</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
