--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@ Version    : 1.0
 Released   : 20131006
 
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>T&R Custom Dealer Services, LLC</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>T&amp;R Custom Dealer Services, LLC</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet">
+<link href="default.css" rel="stylesheet" type="text/css" media="all">
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all">
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
@@ -27,7 +26,7 @@ Released   : 20131006
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><img src="images/logo2.png" alt="T&R Custom Dealer Services"></img></h1>
+			<h1><img src="images/logo2.png" alt="T&amp;R Custom Dealer Services"></h1>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
@@ -46,29 +45,24 @@ Released   : 20131006
 			<h2>Work in Progress</h2>
 			<span class="byline">Hope you like it so far, Dad.</span> </div>
 		<div class="column1">
-			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full"></a>
 				<h3>Placeholder</h3>
 				<p>Placeholder</p>
 				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 		<div class="column2">
-			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full"></a>
 				<h3>Placeholder</h3>
 				<p>Placeholder</p>
 				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
 		<div class="column3">
-			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full"></a>
 				<h3>Placeholder</h3>
 				<p>Placeholder</p>
 				<a href="#" class="button button-small">Placeholder</a> </div>
 		</div>
-		<div class="column4">
-			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
-				<h3>Placeholder</h3>
-				<p>Placeholder</p>
-				<a href="#" class="button button-small">Placeholder</a> </div>
-		</div>
+		
 	</div>
 </div>
 <div id="wrapper1">
@@ -77,7 +71,7 @@ Released   : 20131006
 			<h2>Placeholder</h2>
 			<span class="byline">Placeholder</span> </div>
 		<div class="content">
-			<p>T&R Custom Dealer Services, LLC </p>
+			<p>T&amp;R Custom Dealer Services, LLC </p>
 			<a href="#" class="button">Placeholder</a> </div>
 	</div>
 <div id="wrapper4">
@@ -94,7 +88,8 @@ Released   : 20131006
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; T&R CUSTOM DEALER SERVICES, LLC. All rights reserved.</p>
+	<p>© T&amp;R CUSTOM DEALER SERVICES, LLC. All rights reserved.</p>
 </div>
-</body>
-</html>
+
+
+</div></div></body></html>
