--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@ Released   : 20131006
 		<div id="logo">
 			<h1><img src="images/logo2.png" alt="T&amp;R Custom Dealer Services"></h1>
 		<div id="menu">
+			<svg viewBox="0 0 1320 300">
+
+  <!-- Symbol -->
+  <symbol id="s-text">
+    <text text-anchor="middle"
+          x="50%" y="50%" dy=".35em">
+      T&R
+    </text>
+  </symbol>  
+
+  <!-- Duplicate symbols -->
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+
+</svg>
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
